[package]
name = "riichi-hand-cli"
version = "0.3.0"
edition = "2021"
authors = ["Takafumi Sakai <tt3.sakai@gmail.com>"]
readme = "README.md"
license = "MIT"
description = "Cli wrapper of riichi-hand"
repository = "https://github.com/SakaiTaka23/riichi-hand-cli"
keywords = ["riichi", "mahjong"]
categories = ["command-line-utilities"]
exclude = [".gitignore"]

[dependencies]
arboard = "3.4.1"
clap = { version = "4.5.27", features = ["derive"] }
image = "0.25.5"
riichi_hand = "0.6.3"
rustyline = "15.0.0"
